# create-tiny-web

./: .gitignore  README.md  bun.lockb  index.ts  package.json
template/: Cargo.toml  Dockerfile  package.json  tailwind.config.ts
template/src/client/: app.ts
template/src/client/views/: counter.tsx  icon.tsx
template/src/server/: main.rs
template/src/server/functions/: get_is_same_asset_hash.rs  mod.rs
template/src/server/routes/: get_asset.rs  get_counter_page.rs  get_public.rs  mod.rs
template/src/server/views/: counter.rs  doc.rs  heading.rs  mod.rs
template/views/templates/: counter.tsx  doc.tsx
