[package]
name = "PROJECT_NAME"
version = "0.0.1"
edition = "2021"

[[bin]]
name = "PROJECT_NAME"
path = "src/server/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.5"
actix-web = "4.5.1"
html-to-string-macro = "0.2.5"
mime = "0.3.17"
rs = { git = "https://github.com/wirunekaewjai/rs.git", rev = "v0.1.0" }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
sha2 = "0.10.8"